unpackaged/main/default/objects/clcommon__Batch_Logging__c/clcommon__Batch_Logging__c.object-meta.xml
<CustomObject>
    <label>Batch Logging</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Batch Logging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Loggings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>