unpackaged/main/default/objects/clcommon__Batch_Logging__c/fields/clcommon__Log__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>