unpackaged/main/default/objects/clcommon__Batch_Logging__c/fields/clcommon__Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>