unpackaged/main/default/objects/clcommon__Batch_Logging__c/fields/clcommon__Thread_Logging__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Thread_Logging__c</fullName>
    <label>Thread Logging</label>
    <referenceTo>clcommon__Thread_Logging__c</referenceTo>
    <relationshipLabel>Batch Loggings</relationshipLabel>
    <relationshipName>Batch_Loggings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>